Fixes layout issues in Firefox options
This makes the three top level layouts (Page, Sidebar, Popup) more explicit.  It's more code, but also more stable and requires fewer overrides.

--- a/extension/index.css
+++ b/extension/index.css
@@ -23,8 +23,6 @@
 }
 
 html, body {
-  height: 100%;
-
   margin: 0;
   padding: 0;
 }
@@ -35,15 +33,27 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-body.Options, body.Import {
-  height: auto;
-  padding: 1em 0.5em;
-}
-
-body.Import {
+.Page body {
   max-width: 40em;
   margin: 1em auto;
 }
+
+.Popup .Root {
+  /* 
+    We do not want the popup to resize, so the following dimensions ensure a consistent layout:
+    https://developer.mozilla.org/en-US/docs/Mozilla/Add-ons/WebExtensions/user_interface/Popups
+  */
+  height: 600px;
+  min-width: 320px;
+  max-width: 400px;
+}
+
+.Sidebar,
+.Sidebar body,
+.Sidebar .Root {
+  height: 100%;
+}
+
 
 /* Normalize margins on block elements */
 h1, h2, h3, h4, h5, h6,
@@ -74,20 +84,6 @@ a[href] {
 
 a[href]:hover {
   text-decoration: underline;
-}
-
-.Root-popup {
-  /* 
-    We do not want the popup to resize, so the following dimensions ensure a consistent layout:
-    https://developer.mozilla.org/en-US/docs/Mozilla/Add-ons/WebExtensions/user_interface/Popups
-  */
-  height: 600px;
-  min-width: 320px;
-  max-width: 400px;
-}
-
-.Root-sidebar {
-
 }
 
 .Panel {
